Fix about-block z-index

--- a/src/v2/scss/pages/_index.scss
+++ b/src/v2/scss/pages/_index.scss
@@ -107,6 +107,7 @@
     margin-top: 2rem;
 
     @include media-breakpoint-up(lg) {
+      background-image: linear-gradient(0deg, rgba(29, 29, 29, 0.00) 0%, rgba(29, 29, 29, 0.8) 100%);
       display: flex;
       flex-direction: column;
       position: absolute;
@@ -115,13 +116,6 @@
       right: 0;
       margin: 0;
       color: $white;
-      &:before {
-        content: "";
-        position: absolute;
-        background-image: linear-gradient(0deg, rgba(29, 29, 29, 0.00) 0%, rgba(29, 29, 29, 0.8) 100%);
-        width: 100%;
-        height: 360px;
-      }
 
       p {
         z-index: $zindex-cover;
